css/styles.css
/* ... */
@media (min-width: 768px) {
  .studio {
    padding: 112px 136px;
  }
}

@media (min-width: 1158px) {
  .studio {
    padding: 188px 0;
  }
}

.studio .container {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 48px;
}

.studio .title {
  max-width: 496px;
}

.btn-service {
  min-width: 169px;
  padding: 16px 32px;
  font-weight: 500;
  letter-spacing: 0.04em;
  line-height: 1.5;
  color: var(--white);
  border-radius: 4px;
  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
  cursor: pointer;
  transition-property: background-color;
  transition-duration: var(--transition-duration);
  transition-timing-function: var(--transition-timing-function);
}

.btn-service:hover,
.btn-service:active,
.btn-service:focus {
  background-color: var(--color-active);
}

/* SECTION 2 STRATEGY */
.strategy-list {
  display: grid;
  justify-items: center;
  gap: 24px;
}

.strategy-card {
  flex: 1;
  width: 288px;
}

.strategy-icon-card {
  height: 112px;
  display: none;
  align-items: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid var(--light-slate);
  background: var(--cloud);
  margin-bottom: 8px;
}

@media (min-width: 768px) {
  .strategy-list {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1158px) {
  .strategy-list {
    display: flex;
  }
  .strategy-icon-card {
    display: flex;
  }
}

.strategy-card .title {
  margin-bottom: 8px;
}

@media (max-width: 1158px) {
  .strategy-card .title {
    font-size: 36px;
  }
}

/* SECTION 3 TEAM */
.team {
  background: var(--cloud);
}

.team-title {
  margin-bottom: 72px;
}

.team-list {
  display: grid;
  justify-content: center;
  gap: 72px;
}

@media (min-width: 768px) {
  .team-list {
    grid-template-columns: repeat(2, 1fr);
    row-gap: 64px;
    column-gap: 24px;
  }

  .team-list > .team-card {
    justify-self: end;
  }

  .team-list > .team-card:nth-child(2n) {
    justify-self: start;
  }
}

@media (min-width: 1158px) {
  .team-list {
    display: flex;
    gap: 24px;
  }
}

.team-card {
  width: 264px;
  border-radius: 0px 0px 4px 4px;
  background: var(--white);
  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
  line-height: 24px;
  text-align: center;
}

.team-card-content {
  padding: 32px 0;
}

.team-card-content > h3.title {
  margin-bottom: 8px;
  line-height: 24px;
}

.team-desc {
  font-size: 16px;
  margin-bottom: 8px;
}

.person-social-links {
  display: flex;
  justify-content: center;
  gap: 24px;
}

/* SECTION 4 PORTFOLIO */

.portfolio-title {
  margin-bottom: 72px;
}

.portfolio-list {
  width: 100%;
  display: grid;
  flex-wrap: wrap;
  column-gap: 24px;
  row-gap: 48px;
  justify-content: center;
}

.portfolio-card {
  flex: 1;
  flex-basis: 100%;
  box-shadow: transparent;
  transition-property: box-shadow;
  transition-duration: var(--transition-duration);
  transition-timing-function: var(--transition-timing-function);
}

@media (min-width: 768px) {
  .portfolio-list {
    grid-template-columns: repeat(2, 1fr);
  }

  .portfolio-list > .portfolio-card {
    justify-self: end;
  }

  .portfolio-list > .portfolio-card:nth-child(2n) {
    justify-self: start;
  }
  .portfolio-card {
    flex-basis: calc(50% - 24px * 1);
  }
}

@media (min-width: 1158px) {
  .portfolio-list {
    display: flex;
  }
  .portfolio-card {
    flex-basis: calc(33% - 24px * 2);
  }
}

.portfolio-image-wrap {
  position: relative;
  overflow: hidden;
}

.portfolio-card-info {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  height: 100%;
  transform: translateY(100%);
  padding: 40px 32px;
  background-color: var(--cart-info-background);
  color: var(--color-secondary);
  line-height: 24px;
  letter-spacing: 0.32px;
  transition-property: transform;
  transition-duration: var(--transition-duration);
  transition-timing-function: var(--transition-timing-function);
}

.portfolio-card:hover .portfolio-card-info,
.portfolio-card:active .portfolio-card-info {
  transform: translateY(0%);
}

.portfolio-card:hover,
.portfolio-card:active {
  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
}

.portfolio-card-content {
  padding: 32px 16px;
  border-width: 1px;
  border-style: solid;
  border-color: var(--card-border-color);
  border-top: none;
}

.portfolio-card-content > h3.title {
  margin-bottom: 8px;
  line-height: 24px;
}

.portfolio-card-content > p {
  line-height: 24px;
}

.footer {
  padding: 100px 0;
  background: var(--color-primary);
}

@media (min-width: 768px) {
  .footer {
    padding: 96px 0px;
  }
}

.footer .container {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  gap: 72px;
}

.footer-logo {
  display: inline-block;
  margin-bottom: 16px;
}

.footer .logo-tail {
  color: var(--color-secondary);
}

.footer-description {
  width: 264px;
  color: var(--color-secondary);
}

.social-media-heading {
  color: var(--white);
  font-weight: 500;
  line-height: 24px;
  letter-spacing: 0.32px;
  margin-bottom: 16px;
}

.social-links {
  display: flex;
  gap: 16px;
}

@media (min-width: 768px) {
  .footer .container {
    flex-wrap: wrap;
    flex-direction: row;
    align-items: baseline;
    text-align: left;
    padding: 0px 108px;
  }

  .footer .subscribe {
    flex-basis: 100%;
  }
}

@media (min-width: 1158px) {
  .footer .container {
    gap: unset;
    padding: 0px;
  }

  .footer > .container > div:first-child {
    margin-right: 120px;
  }

  .social-links {
    margin-right: 80px;
  }

  .footer .subscribe {
    flex-basis: unset;
  }
}

.subscribe-heading {
  color: var(--white);
  font-size: 16px;
  font-weight: 500;
  line-height: 1.5;
  letter-spacing: 0.32px;
  margin-bottom: 16px;
}

.subscribe-form {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: center;
  gap: 24px;
  align-items: center;
}
/* ... */

